--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <h2>🔥 ANDROID FU#KER PANEL</h2>
                     <span class="status coming-soon">COMING SOON</span>
                 </div>
-                <p class="description">Ultimate Android hacking panel with root access, app manipulation, and system control.</p>
+                <p class="description">Android FF PANEL WITH ALL FUNTIONS WITH 100% SAFE</p>
                 <div class="countdown-mini" id="android-countdown">
                     <div class="countdown-mini-item">
                         <span class="countdown-mini-value" id="mini-days">00</span>
@@ -188,3 +188,4 @@
     <script src="particles.js"></script>
 </body>
 </html>
+
